# boys-club

./: Cargo.toml  Idea.txt  README.md  build.rs
forked_iced/native/src/: event.rs
forked_iced/winit/src/: application.rs
src/: main.rs
textgen/: Cargo.toml
textgen/bindings/: Cargo.toml
textgen/src/: jokes.rs  lib.rs
textgen/src/platform/: linux.rs  mod.rs  windows.rs
